city lights on frequency data

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div id="app" class="app-container"></div>
+    <audio id="audio" src="assets/Cooroot & Alpsol - Autumn's Whisper.mp3" controls></audio>
     <script src="src/index.js"></script>
 </body>
 
