sprites update & some fixed stuff

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Cooroot & Alpsol - Autumn's Whisper</title>
     <link rel="stylesheet" href="src/style.css">
     <script src="src/pixi.min.js"></script>
+    <script src="src/rainyday.min.js"></script>
 </head>
 
 <body>
     <div id="app" class="app-container"></div>
-    <audio id="audio" src="assets/Cooroot & Alpsol - Autumn's Whisper.mp3" controls></audio>
+    <audio id="audio" src="assets/Cooroot & Alpsol - Autumn's Whisper.mp3"></audio>
+    <script src="https://cdn.jsdelivr.net/npm/pixi-filters@latest/dist/pixi-filters.js"></script>
     <script src="src/index.js"></script>
 </body>
 
