adding bottom nav

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
 <body>
     <div id="app" class="app-container"></div>
+    <div class="bottom-nav">
+        <a href="">DOWNLOAD/STREAM</a>
+    </div>
+
     <audio id="audio" src="assets/Cooroot & Alpsol - Autumn's Whisper.mp3"></audio>
     <script src="https://cdn.jsdelivr.net/npm/pixi-filters@latest/dist/pixi-filters.js"></script>
     <script src="src/index.js"></script>
