--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Cooroot & Alpsol - Autumn's Whisper</title>
     <link rel="stylesheet" href="src/style.css">
     <script src="src/pixi.min.js"></script>
-    <script src="src/rainyday.min.js"></script>
 </head>
 
 <body>
@@ -15,6 +14,13 @@
     <div class="bottom-nav">
         <a href="">DOWNLOAD/STREAM</a>
     </div>
+
+    <div class="wrapper">
+
+        <div class="play-button" id="playButton">PLAY</div>
+
+    </div>
+
 
     <audio id="audio" src="assets/Cooroot & Alpsol - Autumn's Whisper.mp3"></audio>
     <script src="https://cdn.jsdelivr.net/npm/pixi-filters@latest/dist/pixi-filters.js"></script>
